examples/k8s-deploy-config-templates/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: ${parent.name}
  name: ${parent.name}
spec:
  type: ClusterIP
  ports: ${jsonEncode(inputs.servicePorts)}
  selector:
    app: ${parent.name}
